kubernetes-networks/canary/web-base.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-base
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-base
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: web-base
    spec:
      containers:
      - name: web
        image: brdm88/web:0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "300m"
        livenessProbe:
          tcpSocket:
            port: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        volumeMounts:
          - name: app
            mountPath: /app
      volumes:
        - name: app
          emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-base
spec:
  selector:
    app: web-base
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000


---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-base
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ingress.local
    http:
      paths:
      - path: /canary
        backend:
          serviceName: web-svc-base
          servicePort: 8000
